fix : simplify dao